--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       <td><p>⭐⭐⭐⭐⭐</p> </td>
     </tr>
     <tr>
-      <td>CSS</td>
+      <td>C++</td>
       <td><p>⭐⭐⭐⭐⭐</p></td>
 
     </tr>
     <tr>
-      <td>JavaScripts</td>
+      <td>Data Structure</td>
       <td><p>⭐⭐⭐⭐⭐</p></td>
     </tr>
   </table>
